Use k8s secret for storing github-token

--- a/k8s/casa/apps/myownradio/mysql-database-backup.yaml
+++ b/k8s/casa/apps/myownradio/mysql-database-backup.yaml
@@ -11,16 +11,6 @@ spec:
   jobTemplate:
     spec:
       template:
-        metadata:
-          annotations:
-            vault.hashicorp.com/agent-inject: "true"
-            vault.hashicorp.com/role: "app"
-            vault.hashicorp.com/agent-pre-populate-only : "true"
-            vault.hashicorp.com/agent-inject-secret-exports: "kv/myownradio/mysql-database-backup"
-            vault.hashicorp.com/agent-inject-template-exports: |
-              {{- with secret "kv/myownradio/mysql-database-backup" -}}
-                export GITHUB_TOKEN={{ .Data.data.GITHUB_TOKEN }}
-              {{- end -}}
         spec:
           containers:
             - name: mysql-backup
@@ -43,10 +33,14 @@ spec:
                   configMapKeyRef:
                     name: myownradio-mysql-configmap
                     key: password
+              - name: GITHUB_TOKEN
+                valueFrom:
+                  secretKeyRef:
+                    name: github-token
+                    key: token
               command: ["/bin/sh", "-c"]
               args:
                 - |
-                  source /vault/secrets/exports &&
                   apk add git mysql-client mariadb-connector-c-dev &&
                   git config --global user.email "hello@pyldin601.dev" &&
                   git config --global user.name "Backup Bot" &&
