Instapp radioterio-pubsub-backend

--- a/k8s/casa/apps/myownradio/kustomization.yaml
+++ b/k8s/casa/apps/myownradio/kustomization.yaml
@@ -54,3 +54,6 @@ resources:
   # channel-bot
   - myownradio-channel-bot-sealedsecret.yaml
 #  - myownradio-channel-bot.yaml
+
+  # pubsub
+  - pubsub-backend-deployment.yaml
