--- a/k8s/casa/apps/myownradio/pubsub-backend-deployment.yaml
+++ b/k8s/casa/apps/myownradio/pubsub-backend-deployment.yaml
@@ -16,6 +16,11 @@ spec:
       containers:
         - name: radioterio-pubsub-backend
           image: pldin601/myownradio-radiomanager-pubsub-backend:23.10.6409421440-19ef3dc
+          env:
+            - name: PORT
+              value: '8080'
+            - name: REDIS_HOST
+              value: 'myownradio-redis'
           resources:
             requests:
               memory: "512Mi"
