--- a/k8s/casa/apps/myownradio/radio-manager-backend-deployment.yaml
+++ b/k8s/casa/apps/myownradio/radio-manager-backend-deployment.yaml
@@ -17,7 +17,7 @@ spec:
     spec:
       containers:
         - name: streamer
-          image: pldin601/myownradio-radio-manager-backend:23.09.6354965021-4ee1a0b
+          image: pldin601/myownradio-radio-manager-backend:23.10.6437154956-0eef4d1
           resources:
             requests:
               memory: "512Mi"
@@ -59,5 +59,7 @@ spec:
                   key: RADIO_STREAMER_TOKEN
             - name: FILE_SYSTEM_ROOT_PATH
               value: ""
+            - name: PUBSUB_BACKEND_ENDPOINT
+              value: radioterio-pubsub-backend.myownradio.svc.cluster.local
       imagePullSecrets:
         - name: dockerconfig
