--- a/k8s/casa/apps/myownradio/radio-manager-backend-deployment.yaml
+++ b/k8s/casa/apps/myownradio/radio-manager-backend-deployment.yaml
@@ -60,6 +60,6 @@ spec:
             - name: FILE_SYSTEM_ROOT_PATH
               value: ""
             - name: PUBSUB_BACKEND_ENDPOINT
-              value: radiomanager-pubsub-backend.myownradio.svc.cluster.local
+              value: http://radiomanager-pubsub-backend.myownradio.svc.cluster.local
       imagePullSecrets:
         - name: dockerconfig
