Deploy test web-egress-deployment.yaml

--- a/k8s/casa/apps/myownradio/kustomization.yaml
+++ b/k8s/casa/apps/myownradio/kustomization.yaml
@@ -59,3 +59,6 @@ resources:
   - pubsub-backend-deployment.yaml
   - pubsub-backend-service.yaml
   - pubsub-backend-ingressroute.yaml
+
+  # test stream
+  - web-egress-deployment.yaml
