--- a/k8s/casa/apps/myownradio/radio-manager-backend-deployment.yaml
+++ b/k8s/casa/apps/myownradio/radio-manager-backend-deployment.yaml
@@ -18,9 +18,11 @@ spec:
       containers:
         - name: streamer
           image: pldin601/myownradio-radio-manager-backend:23.10.6518017277-292c1ea
-          volumeDevices:
-            - devicePath: /dev/dri
-              name: /dev/dri
+          securityContext:
+            privileged: true
+          volumeMounts:
+            - name: dev-dri
+              mountPath: /dev/dri
           resources:
             requests:
               memory: "512Mi"
@@ -64,5 +66,9 @@ spec:
               value: ""
             - name: PUBSUB_BACKEND_ENDPOINT
               value: http://radiomanager-pubsub-backend.myownradio.svc.cluster.local:8080
+      volumes:
+        - name: dev-dri
+          hostPath:
+            path: /dev/dri
       imagePullSecrets:
         - name: dockerconfig
