--- a/k8s/casa/apps/myownradio/web-egress-deployment.yaml
+++ b/k8s/casa/apps/myownradio/web-egress-deployment.yaml
@@ -47,8 +47,8 @@ spec:
               value: '128'
             - name: CEF_GPU_ENABLED
               value: 'true'
-            - name: VIDEO_ACCELERATION
-              value: 'VAAPI'
+#            - name: VIDEO_ACCELERATION
+#              value: 'VAAPI'
           resources:
             requests:
               memory: "512Mi"
