--- a/k8s/casa/apps/myownradio/web-egress-deployment.yaml
+++ b/k8s/casa/apps/myownradio/web-egress-deployment.yaml
@@ -34,7 +34,7 @@ spec:
                   name: rtmp-stream-key
                   key: rtmp-stream-key
             - name: GST_DEBUG
-              value: '4'
+              value: 'GST_CAPS:6'
             - name: VIDEO_WIDTH
               value: '1280'
             - name: VIDEO_HEIGHT
@@ -47,8 +47,8 @@ spec:
               value: '128'
             - name: CEF_GPU_ENABLED
               value: 'true'
-#            - name: VIDEO_ACCELERATION
-#              value: 'VAAPI'
+            - name: VIDEO_ACCELERATION
+              value: 'VAAPI'
           resources:
             requests:
               memory: "512Mi"
