--- a/k8s/casa/apps/myownradio/kustomization.yaml
+++ b/k8s/casa/apps/myownradio/kustomization.yaml
@@ -61,4 +61,4 @@ resources:
   - pubsub-backend-ingressroute.yaml
 
   # test stream
-  - web-egress-controller.yaml.yaml
+  - web-egress-controller.yaml
