--- a/k8s/casa/apps/myownradio/radio-manager-backend-ingressroute.yaml
+++ b/k8s/casa/apps/myownradio/radio-manager-backend-ingressroute.yaml
@@ -18,6 +18,7 @@ spec:
   forwardAuth:
     address: http://radio-manager-backend.myownradio.svc.cluster.local:8080/v0/forward-auth/by-token
     authResponseHeaders: ["user-id"]
+    authRequestHeaders: ["authentication"]
     trustForwardHeader: false
 
 ---
