--- a/k8s/casa/apps/myownradio/fs-backup.yaml
+++ b/k8s/casa/apps/myownradio/fs-backup.yaml
@@ -8,7 +8,7 @@ spec:
 #  successfulJobsHistoryLimit: 2
 #  failedJobsHistoryLimit: 0
 #  schedule: "0 12 * * *"
-  jobTemplate:
+#  jobTemplate:
     spec:
       template:
         spec:
