--- a/k8s/casa/apps/myownradio/fs-backup.yaml
+++ b/k8s/casa/apps/myownradio/fs-backup.yaml
@@ -1,15 +1,15 @@
 ---
-kind: Job
+kind: CronJob
 apiVersion: batch/v1
 metadata:
   name: fs-backup-cronjob
   namespace: myownradio
 spec:
-#  successfulJobsHistoryLimit: 2
-#  failedJobsHistoryLimit: 0
-#  schedule: "0 12 * * *"
-#  jobTemplate:
-#    spec:
+  successfulJobsHistoryLimit: 2
+  failedJobsHistoryLimit: 0
+  schedule: "0 12 * * *"
+  jobTemplate:
+    spec:
       template:
         spec:
           volumes:
