--- a/k8s/casa/apps/myownradio/web-egress-controller.yaml
+++ b/k8s/casa/apps/myownradio/web-egress-controller.yaml
@@ -66,7 +66,7 @@ metadata:
 rules:
   - apiGroups: ["batch", ""]
     resources: ["jobs", "pods"]
-    verbs: ["list", "get", "create", "delete"]
+    verbs: ["list", "get", "create", "delete", "watch"]
 ---
 apiVersion: rbac.authorization.k8s.io/v1
 kind: RoleBinding
