--- a/k8s/casa/apps/torrent-bot/torrent-bot.yaml
+++ b/k8s/casa/apps/torrent-bot/torrent-bot.yaml
@@ -1,43 +1,46 @@
 ---
 apiVersion: batch/v1
-kind: Job
+kind: CronJob
 metadata:
-  name: torrent-bot-job
+  name: torrent-bot-sync-job
 spec:
-  completions: 1
-  parallelism: 1
-  template:
+  successfulJobsHistoryLimit: 2
+  failedJobsHistoryLimit: 0
+  schedule: "*/30 * * * *"
+  jobTemplate:
     spec:
-      volumes:
-        - name: db-volume
-          persistentVolumeClaim:
-            claimName: db-volume-claim
-      containers:
-        - name: torrent-bot
-          image: pldin601/torrent-bot@sha256:5f8453bc75a30921b128d0a6cc6afe16b370e07bb57133f75cfb713c12c9d95e
-          volumeMounts:
-            - mountPath: /data
-              name: db-volume
-          env:
-            - name: STORAGE_FILE
-              value: /data/torrent-bot.db
-            - name: TRANS_URL
-              value: http://transmission-daemon:9091/transmission/rpc
-            - name: TRANS_DOWNLOAD_DIRECTORY
-              value: /data/Bot
-            - name: TRANS_DRY_RUN
-              value: "true"
-            - name: TOLOKA_USERNAME
-              valueFrom:
-                secretKeyRef:
-                  name: toloka-secret
-                  key: USERNAME
-            - name: TOLOKA_PASSWORD
-              valueFrom:
-                secretKeyRef:
-                  name: toloka-secret
-                  key: PASSWORD
-      restartPolicy: OnFailure
+      template:
+        spec:
+          volumes:
+            - name: db-volume
+              persistentVolumeClaim:
+                claimName: db-volume-claim
+          containers:
+            - name: torrent-bot
+              image: pldin601/torrent-bot@sha256:5f8453bc75a30921b128d0a6cc6afe16b370e07bb57133f75cfb713c12c9d95e
+              volumeMounts:
+                - mountPath: /data
+                  name: db-volume
+              env:
+                - name: STORAGE_FILE
+                  value: /data/torrent-bot.db
+                - name: TRANS_URL
+                  value: http://transmission-daemon:9091/transmission/rpc
+                - name: TRANS_DOWNLOAD_DIRECTORY
+                  value: /data/Bot
+                - name: TRANS_DRY_RUN
+                  value: "true"
+                - name: TOLOKA_USERNAME
+                  valueFrom:
+                    secretKeyRef:
+                      name: toloka-secret
+                      key: USERNAME
+                - name: TOLOKA_PASSWORD
+                  valueFrom:
+                    secretKeyRef:
+                      name: toloka-secret
+                      key: PASSWORD
+          restartPolicy: OnFailure
 ---
 apiVersion: v1
 kind: PersistentVolumeClaim
