Set schedule to daytime (9h-22h)

--- a/k8s/casa/apps/torrent-bot/torrent-bot.yaml
+++ b/k8s/casa/apps/torrent-bot/torrent-bot.yaml
@@ -6,7 +6,7 @@ metadata:
 spec:
   successfulJobsHistoryLimit: 2
   failedJobsHistoryLimit: 0
-  schedule: "*/30 * * * *"
+  schedule: "*/30 9-22 * * *"
   jobTemplate:
     spec:
       template:
