Introduce `SERVER_ENDPOINT` env

--- a/k8s/casa/apps/torrent-bot/torrent-bot-runner.yaml
+++ b/k8s/casa/apps/torrent-bot/torrent-bot-runner.yaml
@@ -47,6 +47,8 @@ spec:
                   value: "384980395"
                 - name: CLIENT_ENDPOINT
                   value: "http://torrent-bot-server:8080"
+                - name: SERVER_ENDPOINT
+                  value: "http://torrent-bot-server:8080"
           restartPolicy: OnFailure
 ---
 apiVersion: v1
