Add polyglot-bot to bootstrap

--- a/k8s/casa/bootstrap/kustomization.yaml
+++ b/k8s/casa/bootstrap/kustomization.yaml
@@ -9,6 +9,7 @@ resources:
   - apps/myownradio.yaml
   - apps/musicloud.yaml
   - apps/torrent-bot.yaml
+  - apps/polyglot-bot.yaml
 #  - apps/superorder-me.yaml
 #  - apps/superorder-old.yaml
 
