--- a/k8s/casa/bootstrap/apps/polyglot-bot.yaml
+++ b/k8s/casa/bootstrap/apps/polyglot-bot.yaml
@@ -2,7 +2,7 @@
 apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
-  name: torrent-bot
+  name: polyglot-bot
   namespace: argocd
   finalizers:
       - resources-finalizer.argocd.argoproj.io
