--- a/k8s/casa/apps/polyglot-bot/polyglot-bot.yaml
+++ b/k8s/casa/apps/polyglot-bot/polyglot-bot.yaml
@@ -16,7 +16,7 @@ spec:
     spec:
       containers:
         - name: polyglot-bot-server
-          image: pldin601/polyglot-bot@sha256:c45ba845bd81a52b26e29d2c9a0f9e68af2383a35afbef6ced8526ad5942db64
+          image: pldin601/polyglot-bot:0.1.0
           env:
             - name: TS_API_KEY
               valueFrom:
