Install external secrets operator

--- a/k8s/casa/bootstrap/kustomization.yaml
+++ b/k8s/casa/bootstrap/kustomization.yaml
@@ -23,6 +23,7 @@ resources:
   - resources/traefik-config.yaml
   - resources/external-endpoints.yaml
   - resources/transmission-rpc.yaml
+  - resources/external-secrets.yaml
 #  - resources/datadog.yaml
 
   # ArgoCD
