--- a/k8s/casa/bootstrap/resources/external-secrets.yaml
+++ b/k8s/casa/bootstrap/resources/external-secrets.yaml
@@ -11,6 +11,7 @@ spec:
   source:
     repoURL: 'https://charts.external-secrets.io'
     chart: 'external-secrets'
+    targetRevision: v0.10.3
   destination:
     server: 'https://kubernetes.default.svc'
     namespace: default
