--- a/k8s/casa/bootstrap/resources/external-secrets.yaml
+++ b/k8s/casa/bootstrap/resources/external-secrets.yaml
@@ -19,3 +19,21 @@ spec:
     automated:
       prune: true
       selfHeal: true
+---
+apiVersion: external-secrets.io/v1beta1
+kind: SecretStore
+metadata:
+  name: external-secretstore
+spec:
+  provider:
+    aws:
+      service: SecretsManager
+      region: us-east-1
+      auth:
+        secretRef:
+          accessKeyIDSecretRef:
+            name: awssm-secret
+            key: access-key
+          secretAccessKeySecretRef:
+            name: awssm-secret
+            key: secret-access-key
