Create example ExternalSecret

--- a/k8s/casa/bootstrap/resources/external-secrets.yaml
+++ b/k8s/casa/bootstrap/resources/external-secrets.yaml
@@ -37,3 +37,23 @@ spec:
           secretAccessKeySecretRef:
             name: awssm-secret
             key: secret-access-key
+---
+apiVersion: external-secrets.io/v1beta1
+kind: ExternalSecret
+metadata:
+  name: external-secret-example
+spec:
+  refreshInterval: 1h
+  secretStoreRef:
+    name: external-secretstore
+    kind: SecretStore
+  target:
+    name: secret-example
+    creationPolicy: Owner
+  data:
+    - secretKey: TOLOKA_PASSWORD
+      remoteRef:
+        key: TOLOKA_PASSWORD
+  dataFrom:
+    - extract:
+        key: HomeClusterSecrets
