--- a/k8s/casa/bootstrap/resources/external-secrets.yaml
+++ b/k8s/casa/bootstrap/resources/external-secrets.yaml
@@ -56,4 +56,4 @@ spec:
         key: TOLOKA_PASSWORD
   dataFrom:
     - extract:
-        key: HomeClusterSecrets
+        key: arn:aws:secretsmanager:us-west-2:205436866093:secret:HomeClusterSecrets-CMQ6cA
