Create Secret example

--- a/k8s/casa/bootstrap/resources/external-secrets.yaml
+++ b/k8s/casa/bootstrap/resources/external-secrets.yaml
@@ -38,6 +38,13 @@ spec:
             name: awssm-secret
             key: secret-access-key
 ---
+apiVersion: v1
+kind: Secret
+metadata:
+  name: secret-example
+type: Opaque
+data: {}
+---
 apiVersion: external-secrets.io/v1beta1
 kind: ExternalSecret
 metadata:
