Fix secret mapping

--- a/k8s/casa/bootstrap/resources/external-secrets.yaml
+++ b/k8s/casa/bootstrap/resources/external-secrets.yaml
@@ -60,7 +60,8 @@ spec:
   data:
     - secretKey: TOLOKA_PASSWORD
       remoteRef:
-        key: TOLOKA_PASSWORD
+        key: arn:aws:secretsmanager:us-west-2:205436866093:secret:HomeClusterSecrets-CMQ6cA
+        property: TOLOKA_PASSWORD
   dataFrom:
     - extract:
         key: arn:aws:secretsmanager:us-west-2:205436866093:secret:HomeClusterSecrets-CMQ6cA
