--- a/k8s/casa/bootstrap/resources/external-secrets.yaml
+++ b/k8s/casa/bootstrap/resources/external-secrets.yaml
@@ -62,6 +62,6 @@ spec:
       remoteRef:
         key: arn:aws:secretsmanager:us-west-2:205436866093:secret:HomeClusterSecrets-CMQ6cA
         property: TOLOKA_PASSWORD
-  dataFrom:
-    - extract:
-        key: arn:aws:secretsmanager:us-west-2:205436866093:secret:HomeClusterSecrets-CMQ6cA
+#  dataFrom:
+#    - extract:
+#        key: arn:aws:secretsmanager:us-west-2:205436866093:secret:HomeClusterSecrets-CMQ6cA
