--- a/k8s/casa/apps/cinewrax/cinewrax-ns.yaml
+++ b/k8s/casa/apps/cinewrax/cinewrax-ns.yaml
@@ -2,6 +2,6 @@
 apiVersion: v1
 kind: Namespace
 metadata:
-  name: myownradio
+  name: cinewrax
   labels:
-    name: myownradio
+    name: cinewrax
