--- a/k8s/casa/apps/cinewrax/cinewrax-pubsub.yaml
+++ b/k8s/casa/apps/cinewrax/cinewrax-pubsub.yaml
@@ -28,6 +28,10 @@ spec:
               value: redis://redis.cinewrax.svc.cluster.local:6379
             - name: LOG_LEVEL
               value: debug
+          readinessProbe:
+            httpGet:
+              path: /health/ready
+              port: http
 ---
 kind: Service
 apiVersion: v1
