Fix readiness probe port should be numeric

--- a/k8s/casa/apps/cinewrax/cinewrax-pubsub.yaml
+++ b/k8s/casa/apps/cinewrax/cinewrax-pubsub.yaml
@@ -31,7 +31,7 @@ spec:
           readinessProbe:
             httpGet:
               path: /health/ready
-              port: http
+              port: 8080
 ---
 kind: Service
 apiVersion: v1
